--- a/public/profile.html
+++ b/public/profile.html
@@ -167,6 +167,10 @@
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
         }
 
         .back-button:hover {
@@ -1154,20 +1158,18 @@
         .rank-badge {
             background: var(--blood-gradient);
             color: var(--bone);
-            padding: 6px 16px;
-            border-radius: 20px;
-            font-size: 0.85rem;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 0.7rem;
             font-weight: 700;
             display: inline-block;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
+            letter-spacing: 1px;
             box-shadow: var(--shadow-glow);
             animation: rankGlow 3s ease-in-out infinite;
             font-family: 'JetBrains Mono', monospace;
-            position: absolute;
-            top: 16px;
-            left: 16px;
-            z-index: 10;
+            margin-bottom: 12px;
+            text-decoration: none;
         }
 
         @keyframes rankGlow {
@@ -1305,9 +1307,9 @@
         <!-- Мрачный заголовок -->
         <div class="profile-header">
             <div class="header-content">
-                <button class="back-button" onclick="window.history.back()">
+                <a href="#" class="back-button" id="back-button">
                     <i data-lucide="arrow-left" style="width: 20px; height: 20px;"></i>
-                </button>
+                </a>
                 <div class="header-title">КРИМИНАЛЬНЫЙ БЛЕФ</div>
             </div>
         </div>
@@ -1476,6 +1478,27 @@
 
             // Запускаем драматические эффекты
             startCriminalEffects();
+
+            // Обработчик кнопки назад
+            const backButton = document.getElementById('back-button');
+            if (backButton) {
+                backButton.addEventListener('click', (e) => {
+                    e.preventDefault();
+
+                    // Haptic feedback если доступен
+                    if (window.Telegram?.WebApp?.HapticFeedback) {
+                        window.Telegram.WebApp.HapticFeedback.impactOccurred('light');
+                    }
+
+                    // Возвращаемся на главный экран
+                    if (window.history.length > 1) {
+                        window.history.back();
+                    } else {
+                        // Fallback - переходим на главную страницу
+                        window.location.href = '/';
+                    }
+                });
+            }
         });
 
         function createCrimeParticles() {
