--- a/public/profile.html
+++ b/public/profile.html
@@ -401,14 +401,15 @@
             font-weight: 800;
             margin-bottom: 8px;
             letter-spacing: 2px;
-            background: linear-gradient(135deg, #FF0040, #DC143C, #8B0000, #FFD700);
-            background-size: 300% 300%;
+            background: linear-gradient(135deg, #FF0040 0%, #DC143C 35%, #8B0000 70%, #FFD700 100%);
+            background-size: 200% 200%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            animation: nameGradientFlow 4s ease-in-out infinite, nameGlitch 8s ease-in-out infinite;
+            animation: nameGradientFlow 4s ease-in-out infinite;
             text-shadow: 0 0 20px rgba(255, 0, 64, 0.5);
             position: relative;
+            display: inline-block;
         }
 
         .profile-name::before {
@@ -416,12 +417,28 @@
             position: absolute;
             top: 0;
             left: 0;
-            background: linear-gradient(135deg, #FF0040, #00BFFF);
+            background: linear-gradient(135deg, #00BFFF 0%, #FF0040 50%, #39FF14 100%);
+            background-size: 200% 200%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             opacity: 0;
             animation: hologramFlicker 6s ease-in-out infinite;
+            z-index: 1;
+        }
+
+        .profile-name::after {
+            content: attr(data-text);
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: linear-gradient(135deg, #FF0040, #DC143C);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            opacity: 0;
+            animation: nameGlitch 8s ease-in-out infinite;
+            z-index: 2;
         }
 
         @keyframes nameGradientFlow {
@@ -442,11 +459,17 @@
             90%,
             100% {
                 opacity: 0;
+                transform: translate(0, 0);
             }
 
-            92%,
+            92% {
+                opacity: 0.6;
+                transform: translate(1px, 0);
+            }
+
             95% {
                 opacity: 0.8;
+                transform: translate(-1px, 0);
             }
         }
 
@@ -455,23 +478,27 @@
             0%,
             95%,
             100% {
-                transform: translate(0);
+                opacity: 0;
+                transform: translate(0, 0);
                 filter: hue-rotate(0deg);
             }
 
             96% {
+                opacity: 0.7;
                 transform: translate(-1px, 1px);
-                filter: hue-rotate(90deg);
+                filter: hue-rotate(90deg) contrast(2);
             }
 
             97% {
+                opacity: 0.5;
                 transform: translate(1px, -1px);
-                filter: hue-rotate(180deg);
+                filter: hue-rotate(180deg) saturate(3);
             }
 
             98% {
+                opacity: 0.3;
                 transform: translate(-1px, -1px);
-                filter: hue-rotate(270deg);
+                filter: hue-rotate(270deg) invert(0.2);
             }
         }
 
@@ -976,8 +1003,8 @@
         .player-name {
             font-weight: 600;
             margin-bottom: 4px;
-            background: linear-gradient(90deg, #FF0040, #DC143C, #FFD700);
-            background-size: 200% 200%;
+            background: linear-gradient(90deg, #FF0040 0%, #DC143C 50%, #FFD700 100%);
+            background-size: 150% 150%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -985,18 +1012,19 @@
             font-family: 'JetBrains Mono', monospace;
             text-shadow: 0 0 10px rgba(255, 0, 64, 0.3);
             transition: all 0.3s ease;
+            display: inline-block;
         }
 
         .leaderboard-item:hover .player-name {
-            background: linear-gradient(90deg, #39FF14, #00BFFF, #FF0040);
-            background-size: 200% 200%;
+            background: linear-gradient(90deg, #39FF14 0%, #00BFFF 50%, #FF0040 100%);
+            background-size: 150% 150%;
             animation: playerNameHover 1s ease-in-out infinite;
             text-shadow: 0 0 15px rgba(57, 255, 20, 0.6);
         }
 
         .leaderboard-item.current-user .player-name {
-            background: linear-gradient(90deg, #FFD700, #FFA500, #FF6347);
-            background-size: 200% 200%;
+            background: linear-gradient(90deg, #FFD700 0%, #FFA500 50%, #FF6347 100%);
+            background-size: 150% 150%;
             animation: currentUserGlow 2s ease-in-out infinite;
             text-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
             font-weight: 700;
@@ -1007,10 +1035,12 @@
             0%,
             100% {
                 background-position: 0% 50%;
+                filter: brightness(1);
             }
 
             50% {
                 background-position: 100% 50%;
+                filter: brightness(1.1);
             }
         }
 
@@ -1019,12 +1049,12 @@
             0%,
             100% {
                 background-position: 0% 50%;
-                filter: brightness(1);
+                filter: brightness(1) saturate(1);
             }
 
             50% {
                 background-position: 100% 50%;
-                filter: brightness(1.3);
+                filter: brightness(1.2) saturate(1.2);
             }
         }
 
@@ -1038,27 +1068,30 @@
 
             50% {
                 background-position: 100% 50%;
-                filter: brightness(1.2) saturate(1.3);
+                filter: brightness(1.15) saturate(1.2);
             }
         }
 
-        /* Дополнительные эффекты для топ-3 игроков */
+        /* Упрощенные эффекты для топ-3 игроков */
         .leaderboard-item:nth-child(1) .player-name {
-            background: linear-gradient(90deg, #FFD700, #FFF200, #DAA520);
+            background: linear-gradient(90deg, #FFD700 0%, #FFF200 50%, #DAA520 100%);
+            background-size: 150% 150%;
             animation: goldGlow 2s ease-in-out infinite;
-            text-shadow: 0 0 25px rgba(255, 215, 0, 1);
+            text-shadow: 0 0 25px rgba(255, 215, 0, 0.9);
         }
 
         .leaderboard-item:nth-child(2) .player-name {
-            background: linear-gradient(90deg, #C0C0C0, #E5E5E5, #A9A9A9);
+            background: linear-gradient(90deg, #C0C0C0 0%, #E5E5E5 50%, #A9A9A9 100%);
+            background-size: 150% 150%;
             animation: silverGlow 2s ease-in-out infinite;
-            text-shadow: 0 0 20px rgba(192, 192, 192, 0.8);
+            text-shadow: 0 0 20px rgba(192, 192, 192, 0.7);
         }
 
         .leaderboard-item:nth-child(3) .player-name {
-            background: linear-gradient(90deg, #CD7F32, #D2691E, #A0522D);
+            background: linear-gradient(90deg, #CD7F32 0%, #D2691E 50%, #A0522D 100%);
+            background-size: 150% 150%;
             animation: bronzeGlow 2s ease-in-out infinite;
-            text-shadow: 0 0 15px rgba(205, 127, 50, 0.6);
+            text-shadow: 0 0 15px rgba(205, 127, 50, 0.5);
         }
 
         @keyframes goldGlow {
@@ -1071,7 +1104,7 @@
 
             50% {
                 background-position: 100% 50%;
-                filter: brightness(1.4) saturate(1.5);
+                filter: brightness(1.25) saturate(1.3);
             }
         }
 
@@ -1085,7 +1118,7 @@
 
             50% {
                 background-position: 100% 50%;
-                filter: brightness(1.3) saturate(1.2);
+                filter: brightness(1.2) saturate(1.1);
             }
         }
 
@@ -1099,7 +1132,7 @@
 
             50% {
                 background-position: 100% 50%;
-                filter: brightness(1.2) saturate(1.1);
+                filter: brightness(1.15) saturate(1.05);
             }
         }
 
