Force LVL badge static positioning - ensure it stays between avatar and name

--- a/public/profile.html
+++ b/public/profile.html
@@ -291,9 +291,9 @@
         .level-badge-center {
             background: linear-gradient(135deg, var(--neon-red), #FF1744);
             color: #FFFFFF;
-            padding: 4px 10px;
+            padding: 6px 12px;
             border-radius: 15px;
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             font-weight: 800;
             border: 1px solid rgba(255, 255, 255, 0.6);
             box-shadow:
@@ -304,8 +304,15 @@
             text-align: center;
             letter-spacing: 0.5px;
             text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-            display: inline-block;
-            margin: 16px 0 16px 0;
+            display: block;
+            margin: 20px auto 20px auto;
+            width: fit-content;
+            position: static !important;
+            transform: none !important;
+            top: auto !important;
+            left: auto !important;
+            right: auto !important;
+            bottom: auto !important;
         }
 
         @keyframes levelPulseSmall {
